@@ -14,6 +14,7 @@
     <extension point="xbmc.addon.metadata">
         <news>
 [add] 'Play (Ask for quality)' context menu
+[add] search by channel or playlist id
 [add] hide_folders, hide_playlists, hide_search, and hide_live to /channel/&lt;channel_id&gt;/ end-point
     - ie. plugin://plugin.video.youtube/channel/UC4PooiX37Pld1T8J5SYT-SQ/?hide_folders=true will hide all folders(Playlists, Search, and Live) in the channel listing
 [fix] playback for some videos (ie. music videos)
